[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/switch/switch.png" type="Texture" id=1]
[ext_resource path="res://core/switch/Switch.gd" type="Script" id=2]
[ext_resource path="res://effects/InvertColors/invert_colors_material.tres" type="Material" id=3]
[ext_resource path="res://sfx/right_tone.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/wrong_tone.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 0.5 )

[node name="Switch" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.5 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast2D" parent="."]
position = Vector2( -4, 6 )
enabled = true
cast_to = Vector2( 8, -4 )
collision_mask = 17

[node name="OnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
bus = "SFX"

[node name="OffSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
bus = "SFX"
